# taskflow

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.deps  Dockerfile.scheduler  Dockerfile.worker  build-deps.sh  download-thirdparty.sh  scheduler.yaml.example  test_multi_task_dispatch.py  test_param_override.py  test_permission_isolation.py  test_recovery.py  test_recovery_v2.py  test_runtime_param.py  worker.yaml.example
backend/mcp/: README.md  app.py  client.py  config.py  server.py  test_mcp.py
backend/mcp/tools/: auth.py  dashboard.py  instance.py  task.py  worker.py  workflow.py
backend/sql/: init_db.sh  migrate_v1.sql  schema.sql  schema_all.sql
backend/sql/migrations/: 001_add_dag_snapshot.sql
backend/src/: pch.h
backend/src/common/: CMakeLists.txt
backend/src/common/config/: scheduler_config.cpp  scheduler_config.h  worker_config.cpp  worker_config.h
backend/src/common/database/: database_manager.cpp  database_manager.h
backend/src/common/models/: cron_job.h  task.h  task_instance.h  user.h  worker_info.h  workflow.h  workflow_instance.h
backend/src/common/response/: api_response.h
backend/src/common/result/: result.h
backend/src/common/util/: crypto_util.cpp  crypto_util.h  grpc_channel_util.h  jwt_util.h  password_util.h  token_blacklist.cpp  token_blacklist.h  uuid.h
backend/src/proto/: taskflow.proto
backend/src/scheduler/: CMakeLists.txt  main.cpp
backend/src/scheduler/api/: auth_controller.cpp  auth_controller.h  dashboard_controller.cpp  dashboard_controller.h  health_controller.cpp  health_controller.h  instance_controller.cpp  instance_controller.h  task_controller.cpp  task_controller.h  user_controller.cpp  user_controller.h  worker_controller.cpp  worker_controller.h  workflow_controller.cpp  workflow_controller.h
backend/src/scheduler/dao/: cron_job_dao.cpp  cron_job_dao.h  task_dao.cpp  task_dao.h  task_instance_dao.cpp  task_instance_dao.h  user_dao.cpp  user_dao.h  worker_dao.cpp  worker_dao.h  workflow_dao.cpp  workflow_dao.h  workflow_instance_dao.cpp  workflow_instance_dao.h
backend/src/scheduler/engine/: cron_parser.h  cron_scheduler.cpp  cron_scheduler.h  dag_driver.cpp  dag_driver.h  dag_engine.cpp  dag_engine.h  dispatcher.h
backend/src/scheduler/grpc/: heartbeat_checker.cpp  heartbeat_checker.h  leader_election.cpp  leader_election.h  scheduler_service.cpp  scheduler_service.h
backend/src/scheduler/middleware/: auth_middleware.cpp  auth_middleware.h  cors_middleware.cpp  cors_middleware.h  role_middleware.cpp  role_middleware.h
backend/src/scheduler/service/: auth_service.cpp  auth_service.h  dag_validator.h  dashboard_service.cpp  dashboard_service.h  instance_service.cpp  instance_service.h  task_service.cpp  task_service.h  user_service.cpp  user_service.h  worker_service.cpp  worker_service.h  workflow_service.cpp  workflow_service.h
backend/src/worker/: CMakeLists.txt  main.cpp
backend/src/worker/executor/: command_executor.cpp  command_executor.h  log_sink.cpp  log_sink.h  script_executor.cpp  script_executor.h  sql_executor.cpp  sql_executor.h  task_executor.cpp  task_executor.h
backend/src/worker/grpc/: worker_client.cpp  worker_client.h
backend/src/worker/util/: resource_collector.h
backend/tests/: CMakeLists.txt  integration_test.sh  test_api_response.cpp  test_config.cpp  test_cron_long_task.cpp  test_cron_parser.cpp  test_dag_cron_extended.cpp  test_dag_driver.cpp  test_dag_engine.cpp  test_dag_validator.cpp  test_dispatcher.cpp  test_executor.cpp  test_executor_extended.cpp  test_models.cpp  test_perf.cpp  test_regression_116.cpp  test_resource_collector.cpp  test_result.cpp  test_round8_fixes.cpp  test_security_util.cpp
docs/: openapi.yaml
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: auth.ts  dashboard.ts  instance.ts  log.ts  task.ts  user.ts  worker.ts  workflow.ts
frontend/src/components/layout/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: userStore.ts
frontend/src/types/: api.ts  instance.ts  task.ts  user.ts  worker.ts  workflow.ts
frontend/src/utils/: auth.ts  format.ts  request.ts
frontend/src/views/: DashboardView.vue  LoginView.vue  NotFoundView.vue
frontend/src/views/instance/: InstanceDetailView.vue  InstanceListView.vue
frontend/src/views/task/: TaskDetailView.vue  TaskListView.vue
frontend/src/views/user/: UserListView.vue
frontend/src/views/worker/: WorkerListView.vue
frontend/src/views/workflow/: WorkflowDetailView.vue  WorkflowEditorView.vue  WorkflowListView.vue
tests/: acceptance_test.sh  deep_acceptance_test.sh  e2e_test.sh  integration_test.sh  perf_test.sh  round4_test.sh  round5_test.sh  stress_test.sh
